[package]
name = "GenettaAudioStreaming"
version = "0.1.0"
edition = "2021"

[lib]
name = "genetta_audio_streaming"  # Use lowercase for better cross-platform compatibility
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
once_cell = "1.19"
bytes = "1.6"
thread-priority = { version = "1", optional = true }

[features]
resample16k = []
realtime = ["thread-priority"]